# photo-backup

./: .gitignore  Cargo.toml  README.md
crates/photo-backup-cli/: Cargo.toml
crates/photo-backup-cli/src/: main.rs
crates/photo-backup-core/: Cargo.toml
crates/photo-backup-core/src/: auth.rs  engine.rs  lib.rs  model.rs  retry.rs  scanner.rs  state.rs  uploader.rs
