[package]
name = "photo-backup-core"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
base64 = "0.22"
rand = "0.8"
reqwest = { version = "0.12", features = ["blocking", "json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
thiserror = "2"
walkdir = "2"
webbrowser = "1"
url = "2"
urlencoding = "2"

[dev-dependencies]
tempfile = "3"
